added the twitter feed to the ui, doesnt look good but works.

--- a/templates/giveaways.html
+++ b/templates/giveaways.html
@@ -5,13 +5,22 @@
     <title>Giveaway Bot</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    
 </head>
 <body>
 
     <h1>Test</h1>
-
+    
+    <!-- Builds the twitter timeline.  Built using the twitter tool for it. -->
+    <a class="twitter-timeline"  href="https://twitter.com/hashtag/giveaway" data-widget-id="845037644677570560">#giveaway Tweets</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+    </script>
+          
+    
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="../static/giveaways.js"></script>
 </body>
 </html>
+
+
