--- a/templates/giveaways.html
+++ b/templates/giveaways.html
@@ -9,7 +9,25 @@
 </head>
 <body>
 
-    <h1>Test</h1>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Giveaway Bot</h1>
+            <br><br>
+
+            <h3>Add a filter:</h3>
+            <div class="container">
+                <form class="form-inline">
+                    <input type="text" class="form-control" id="add-filter-textbox" placeholder="Filter Name">
+                    <button type="button" class="btn btn-default" id="add-filter-button">Add Filter</button>
+                </form>
+            </div>
+            <br>
+
+            <h3>Current filters: (click to remove)</h3>
+            <br>
+            <div id="filters" class="container"></div>
+        </div>
+    </div>
           
     
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
