added a giveaway rss feed

--- a/templates/giveaways.html
+++ b/templates/giveaways.html
@@ -42,15 +42,10 @@
     <!-- page sections -->
     <div class="row">
       <div class="col-lg-6">
-        <h2>Section #1</h2>
-        <img class="img-responsive" src="http://technoflix.com/wp-content/uploads/2013/07/twitter_bot-300x300.png">
-        <p>
-          display some info here...
-          display some info here...
-          display some info here...
-          display some info here...
-          display some info here...
-        </p>
+            <!--Twitter feed widget builder did this. https://twitter.com/settings/widgets/850179519709368325/edit?focus_textarea=1&notice=WIDGET_CREATED -->
+            <a class="twitter-timeline"  href="https://twitter.com/search?q=giveaway" data-widget-id="850179519709368325">Tweets about giveaway</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        
       </div>
 
       <div class="col-lg-6">
